# opio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
conan_profiles/: ubu-clang-13  ubu-clang-18  ubu-gcc-11  ubu-gcc-11-asan  ubu-gcc-11-avx  ubu-gcc-12  ubu-gcc-13  ubu-gcc-13-asan  ubu-gcc-14  vs2022  vs2022-AVX2
logger/: CMakeLists.txt
logger/cmake/: lib-config.cmake.in
logger/include/opio/logger/: cfg.hpp  cfg_json.hpp  log.hpp  logger_factory.hpp  sink_factory.hpp
logger/src/opio/logger/: cfg_json.cpp  log.cpp  logger_factory.cpp  sink_factory.cpp
logger/test/: CMakeLists.txt  cfg_json.cpp
net/: CMakeLists.txt
net/cmake/: lib-config.cmake.in
net/examples/: logger.hpp
net/examples/tcp/: CMakeLists.txt  echo_server.cpp  slow_proxy.cpp  slow_proxy.json
net/include/opio/net/: asio_include.hpp  asio_thread.hpp  buffer.hpp  heterogeneous_buffer.hpp  locking.hpp  network_iface_to_addr.hpp  operation_watchdog.hpp  stats.hpp  try_make_addr.hpp
net/include/opio/net/tcp/: acceptor.hpp  cfg.hpp  cfg_json.hpp  connection.hpp  connection_id.hpp  connector.hpp  error_code.hpp  utils.hpp
net/include/opio/net/udp/: cfg.hpp  cfg_json.hpp  udp_message_receiver.hpp  udp_message_receiver_fwd.hpp
net/src/opio/net/: network_iface_to_addr.cpp  try_make_addr.cpp
net/test/: CMakeLists.txt  buffer.cpp  heterogeneous_buffer.cpp  network_iface_to_addr.cpp  operation_watchdog.cpp  try_make_addr.cpp
net/test/reusable_utils/: tcp_test_utils.cpp  tcp_test_utils.hpp
net/test/tcp/: acceptor.cpp  cfg.cpp  cfg_json.cpp  connection.cpp  connection_ctor_params.cpp  connection_hetero_buffer.cpp  connection_skip_transferred_part.cpp  connection_sync_async_write_switching.cpp  connection_sync_write_heuristic_eq_0.cpp  connection_tests.ipp  connection_write_timeout.cpp  connection_xxx_send.cpp  connector.cpp  single_writable_sequence.cpp  stats.cpp  utils.cpp
net/test/udp/: cfg_json.cpp  udp_message_receiver.cpp
opio/: CMakeLists.txt
opio/cmake/: lib-config.cmake.in
opio/include/opio/: binary_view_fmt.hpp  exception.hpp  expected_include.hpp  log.hpp  version.hpp
proto_entry/: CMakeLists.txt  cheetah_wrapper.cmake  run_cheetah.py
proto_entry/cmake/: lib-config.cmake.in
proto_entry/examples/: CMakeLists.txt
proto_entry/examples/ping_pong_entry/: CMakeLists.txt  main.cpp
proto_entry/examples/ping_pong_entry/opio/proto_entry/examples/ping_pong/: ping_pong.proto
proto_entry/include/opio/proto_entry/: cfg.hpp  cfg_json.hpp  entry_base.hpp  message_carrier.hpp  pkg_header.hpp  pkg_input.hpp  std_entry_shortcuts_factory.hpp  utils.hpp
proto_entry/include/opio/proto_entry/ext/: back_pressure.hpp
proto_entry/include/opio/proto_entry/impl/: protobuf_parsing_engines.hpp  self_contained_protobuf_arena.hpp
proto_entry/src/opio/proto_entry/: entry_base.cpp
proto_entry/templates/: entry.tmpl.hpp
proto_entry/test/: CMakeLists.txt  cfg.cpp  cfg_json.cpp  entry.cpp  entry_message_consumer_tests.ipp  entry_msg_type_lut.cpp  execute_for_reference.cpp  ext_back_pressure.cpp  impl_protobuf_parsing_engines.cpp  message_carrier.cpp  pkg_header.cpp  pkg_input.cpp  test_utils.hpp  utest.proto  utils.cpp
proto_entry/test/suppressions/: tsan
test_utils/: CMakeLists.txt
test_utils/include/opio/test_utils/: test_logger.hpp  test_read_config.hpp
test_utils/src/opio/test_utils/: test_logger.cpp
